[package]
name = "alw-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alw-core = { version = "0.1.0",path = "../../utils/alw-core"}
axum = { version = "0.6", features = ["headers"] }
jwt-simple = "0.11"
once_cell = "1"
serde = { version = "1", features = ["derive"] }